sandbox/output
Hiker.java:6: error: cannot find symbol
        for (int i = 0; i < token.length; i++) {
                                 ^
  symbol:   variable length
  location: variable token of type String
Hiker.java:7: error: array required, but String found
             if (token[i] >= '0' && token <= '9') {
                      ^
Hiker.java:7: error: bad operand types for binary operator '<='
             if (token[i] >= '0' && token <= '9') {
                                          ^
  first type:  String
  second type: char
Hiker.java:8: error: array required, but String found
                 sb.append(token[i]);
                                ^
Hiker.java:12: error: incompatible types: String cannot be converted to String[]
        return sb.toString();
                          ^
Hiker.java:17: error: cannot find symbol
        String[] rs = split2(args).split(",");
                                  ^
  symbol:   method split(String)
  location: class String[]
6 errors
